# habit-tracker-be

./: .flake8  .gitignore  Procfile  README.md  compose.yml  makefile  manage.py  pyproject.toml  requirements.txt
core/: admin.py  models.py  openapi.py  schema.py  serializers.py  types.py  urls.py  utils.py  views.py
core/migrations/: 0001_initial.py  0002_habit_author_entry.py  0002_habit_status.py  0003_alter_entry_id_alter_habit_id.py  0003_remove_habit_goal_unit_habit_goal_timespan.py  0004_rename_goal_frequency_habit_goalfrequency_and_more.py  0005_alter_entry_date.py  0006_habit_goalfrom_habit_goalto_and_more.py  0007_alter_habit_options_alter_habit_status.py  0008_alter_habit_status.py  0009_rename_goalfrequency_habit_goal.py  0010_alter_habit_goaltype.py
core/templates/registration/: registration.html
habits_tracker/: asgi.py  settings.py  urls.py  views.py  wsgi.py
schemas/: core.openapi.yml  summary-query.schema.gql
