[tool.poetry]
name = "habits_tracker"
version = "0.0.0"
description = "A backend for my Habits Tracker project"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.4"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
python-dotenv = "^1.0.1"
django-cors-headers = "^4.6.0"
drf-spectacular = "^0.28.0"
graphene-django = "3.2.2"
gunicorn = "^23.0.0"
whitenoise = "^6.8.2"
psycopg = {extras = ["binary", "pool"], version = "^3.2.3"}
psycopg2-binary = "^2.9.10"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.4"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
